--- a/assets/css/title-btn-paragraph.css
+++ b/assets/css/title-btn-paragraph.css
@@ -25,3 +25,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .title-btn-paragraph-container {
+    padding: 25px;
+  }
+}
